cabal-version: 2.2
name:          docs
version:       1.0.3
synopsis:
  Generate docs for the package.

license:       BSD-3-Clause
author:        Danila Danko
maintainer:    Danila Danko <https://github.com/deemp>
category:      Servant, Web

executable docs
  default-language: GHC2021
  main-is:          Main.hs
  build-depends:
    , base  >=4.16
    , lima
    , text
