cabal-version: 2.2
name:          servant-queryparam-example
version:       1.0.0
synopsis:
  Demo server with records that represent query parameters in @servant@ APIs.

license:       BSD-3-Clause
author:        Danila Danko
maintainer:    Danila Danko <https://github.com/deemp>
category:      Servant, Web

executable example
  default-language: GHC2021
  main-is:          Main.hs
  build-depends:
    , aeson
    , base                         >=4.16  && <5
    , bytestring
    , openapi3
    , servant
    , servant-openapi3
    , servant-queryparam-core      >=1.0.0
    , servant-queryparam-openapi3
    , servant-queryparam-server
    , servant-server
    , transformers
    , warp

test-suite readme-hs-to-md
  type: exitcode-stdio-1.0
  default-language: GHC2021
  main-is:          HsMd.hs
  build-depends:
    , base  >=4.16
    , lima
    , text
