cabal-version: 2.2
name: servant-queryparam-openapi3
version: 0.0.1
maintainer: https://github.com/deemp
copyright: Kristof Bastiaensen 2020
synopsis: Instances of classes from [openapi3](https://hackage.haskell.org/package/openapi3) for [servant-queryparam-server](https://hackage.haskell.org/package/servant-queryparam-server).
license: BSD-3-Clause
build-type: Simple

source-repository head
    type: git
    location: https://github.com/deemp/servant-queryparam

library
   default-language: GHC2021
   Ghc-options: -Wall
   exposed-modules:
        Servant.OpenApi.Record
   hs-source-dirs:
        src
   build-depends:
        base >= 4.16 && < 5,
        servant >= 0.19,
        servant-server >= 0.19,
        servant-queryparam-core >= 0.0.1,
        servant-openapi3,
        openapi3,
        text,
        bytestring,
        warp